--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,12 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.eccc.lifesupport.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
